# vortek-termux

./: README.md
client/bcn_layer/: CMakeLists.txt  LICENSE  build.sh  vortek_bcn_layer.json.in
client/bcn_layer/cmake/: binary_to_header.cmake  glibc-cxx.sh
client/bcn_layer/src/: analyze_astc_parameters.slang  astc_debug.h  astc_debug.slang  astc_encoder.slang  astc_pack.slang  bc6.comp  bc6_iv.comp  bc7.comp  bc7_iv.comp  bcn.cpp  bcn.hpp  bcn_layer.cpp  bcn_layer.hpp  bitextract.h  buffer.cpp  buffer.hpp  command_buffer.cpp  command_buffer.hpp  encoder_utils.slang  etc2_encode.slang  fence.cpp  fence.hpp  image.cpp  image.hpp  logger.cpp  logger.hpp  mali_gpu_profiler.cpp  mali_gpu_profiler.hpp  pipeline_state.cpp  pipeline_state.hpp  queue.cpp  queue.hpp  rgtc.comp  rgtc_iv.comp  s3tc.comp  s3tc_iv.comp  staging_resources.cpp  staging_resources.hpp  vk_func.hpp  watermark.comp
client/bcn_layer/src/vulkan/: vk_layer.h
client/vortek/: CMakeLists.txt  build.sh  vortek_icd.aarch64.json
client/vortek/include/: ring_buffer.h  vortek.h  winlator.h
client/vortek/src/: ring_buffer.c  vulkan_calls.c
server/vortekrenderer/: CMakeLists.txt
server/vortekrenderer/include/: vk_context.h  xwindow_swapchain.h
server/vortekrenderer/src/: ahardwarebuffer_fd.c  cli_main.c  request_handler.c  vk_context.c  vulkan_helper.c  xwindow_swapchain.c
server/winlator/include/: ring_buffer.h
server/winlator/src/: ring_buffer.c
